--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     { "path": "./tsconfig.node.json" }
   ],
   "compilerOptions": {
-    "strict":true,
+    "strict":false,
     "noImplicitAny": true,
     "strictFunctionTypes": true,
     "strictNullChecks": true
